<resources>
    <string name="app_name">MyGallery</string>
    <string name="current_photo_description">Current Photo</string>

    <!-- AllPhotosMainActivity -->
    <string name="tab_title_all_photos">All photos</string>
    <string name="tab_title_my_photos">My photos</string>

    <!-- empty view -->
    <string name="empty_view_text">You don\'t have photos.\n Please save it from previous section</string>

    <!-- error_view -->
    <string name="error_view_text">Oops… something went wrong.\n Try to refresh</string>
    <string name="error_current_photo_text">Oops… something went wrong</string>

    <string name="all_photo_title">Gallery</string>
    <string name="current_photo_title">Photo</string>

    <!--current_photo menu-->
    <string name="share_photo">Share</string>

    <!-- dialog_save_photo -->
    <string name="dialog_save_photo_title">Save this photo?</string>
    <string name="dialog_photo_cancel_btn_text">Cancel</string>
    <string name="dialog_photo_ok_btn_text">Ok</string>

    <!-- dialog_delete_photo -->
    <string name="dialog_delete_photo_title">Delete this photo?</string>
</resources>
